--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "horizon-ui-chakra-nextjs",
+  "name": "prode.ar",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -19,7 +19,8 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "swr": "^2.2.2"
   },
   "scripts": {
     "dev": "next dev",
