--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-table": "^7.8.0",
-    "swr": "^2.2.2"
+    "swr": "^2.2.2",
+    "usehooks-ts": "^2.9.1"
   },
   "scripts": {
     "dev": "next dev",
