--- a/package.json
+++ b/package.json
@@ -3,22 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.5",
-    "@chakra-ui/react": "1.8.8",
-    "@chakra-ui/system": "^1.12.1",
-    "@chakra-ui/theme-tools": "^1.3.6",
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@chakra-ui/icons": "^2.1.0",
+    "@chakra-ui/react": "^2.8.0",
+    "@chakra-ui/theme-tools": "^2.1.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/dm-sans": "^5.0.11",
     "@vercel/kv": "^0.2.2",
     "apexcharts": "^3.35.2",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^6.5.1",
     "nanoid": "^4.0.2",
-    "next": "^12.2.5",
-    "react": "^17.0.2",
+    "next": "^13.4.19",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-table": "^7.8.0",
     "swr": "^2.2.2",
     "usehooks-ts": "^2.9.1"
