Fix font version to keep `600` weight

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@chakra-ui/theme-tools": "^2.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/dm-sans": "^5.0.11",
+    "@fontsource/dm-sans": "5.0.12",
     "@vercel/kv": "^0.2.2",
     "apexcharts": "^3.35.2",
     "framer-motion": "^6.5.1",
